# latch

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile.docs  IMPLEMENTATION_SUMMARY.md  Justfile  LICENSE  MANIFEST.in  README.md  commands.txt  config  dev-requirements.in  dev-requirements.txt  doc-requirements.in  doc-requirements.txt  paths.txt  pyproject.toml  requirements.in  requirements.txt  setup.py  test_launch.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yaml
cli/: main.py  tinyrequests.py  utils.py
cli/auth/: __init__.py  csrf.py  oauth2.py  pkce.py
cli/services/: __init__.py  cp.py  execute.py  get.py  get_params.py  local_execute.py  login.py  ls.py  mkdir.py  open_file.py  rm.py  touch.py
cli/services/register/: __init__.py  models.py  register.py
docs/: cp.md  init.md  latch.md  parameter_metadata.md  register.md  task_dependencies.md  tasks.md  workflow_io.md  workflow_metadata.md  writing_a_workflow.md
docs/source/: alphafold.md  conf.py  index.md  mageck.md  nf-core-rnaseq.md  parameter_metadata.md  subcommands.md  task_dependencies.md  task_overview.md  workflow_io.md  workflow_metadata.md  workflow_overview.md
docs/source/api/: index.md  latch.auth.rst  latch.cli.rst  latch.config.rst  latch.functions.rst  latch.gql.rst  latch.registry.rst  latch.registry.upstream_types.rst  latch.resources.rst  latch.rst  latch.services.register.rst  latch.services.rst  latch.types.rst  latch.verified.rst  latch_cli.auth.rst  latch_cli.centromere.rst  latch_cli.config.rst  latch_cli.docker_utils.rst  latch_cli.exceptions.rst  latch_cli.rst  latch_cli.services.cp.rst  latch_cli.services.deprecated.rst  latch_cli.services.init.assemble_and_sort.rst  latch_cli.services.init.example_conda.rst  latch_cli.services.init.example_r.rst  latch_cli.services.init.rst  latch_cli.services.init.template.rst  latch_cli.services.register.rst  latch_cli.services.rst  latch_cli.services.test_data.rst  latch_cli.tui.rst  latch_cli.utils.rst  modules.rst  tests.rst  wf.rst
docs/source/automation/: automation-usecase.md  example-data-addition.md  example-interval.md  overview.md
docs/source/basics/: adding_secrets.md  caching.md  conditional_and_map_tasks.md  conditional_section.md  customize_docs.md  customizing_interface.md  defining_cloud_resources.md  defining_environment.md  draft.md  file_operators.md  inputs_outputs.md  latch_develop_example.md  latch_urls.md  local_development.md  map_task.md  messages.md  parameter_types.md  preview_interface.md  remote_execution.md  remote_registration.md  retries.md  reuse_workflows.md  uploading_test_data.md  what_is_a_workflow.md  when_to_create_task.md  workflow_ui.md  working_with_files.md  writing_dockerfiles.md
docs/source/cli/: cp.md  mv.md
docs/source/concepts/: execution_scheduling.md  flyte_interaction.md  tasks_workflows.md  using_console.md  workflow_lifecycle.md
docs/source/examples/: docker-recipes.md  docker_recipes.md  workflows-examples.md  workflows_examples.md
latch/: __init__.py  _deprecation.py  account.py  config.py  constants.py  executions.py  messages.py  utils.py
latch/account/: account.py
latch/auth/: __init__.py  csrf.py  oauth2.py  pkce.py  utils.py
latch/cli/: main.py
latch/config/: __init__.py  latch.py  user.py
latch/functions/: __init__.py  messages.py  operators.py  secrets.py
latch/gql/: __init__.py  _execute.py  execute.py
latch/idl/: utils.py
latch/ldata/: node.py  path.py  type.py
latch/path/: __init__.py  path.py
latch/registry/: __init__.py  filter.py  project.py  record.py  row.py  table.py  types.py  utils.py
latch/resources/: conditional.py  dynamic.py  dynamic_tasks.py  launch_plan.py  map_tasks.py  pod_specs.py  pods.py  reference_workflow.py  tasks.py  workflow.py
latch/services/: __init__.py  cp.py  execute.py  get.py  get_params.py  init.py  local_execute.py  login.py  ls.py  mkdir.py  open_file.py  register.py  rm.py  touch.py
latch/type_engine/: __init__.py  test_type_engine.py
latch/types/: __init__.py  directory.py  file.py  glob.py  json.py  metadata.py  path.py  samples.py  samplesheet.py  url.py  utils.py
latch/verified/: __init__.py  deseq2.py  mafft.py  pathway.py  rnaseq.py  trim_galore.py
latch_cli/: click_utils.py  constants.py  crash_handler.py  crash_reporter.py  dag.py  main.py  menus.py  tinyrequests.py  tui.py  types.py  utils.py  workflow_config.py
latch_cli/auth/: __init__.py  csrf.py  oauth2.py  pkce.py  utils.py
latch_cli/centromere/: ctx.py  utils.py
latch_cli/config/: latch.py  user.py
latch_cli/docker_utils/: __init__.py
latch_cli/exceptions/: cache.py  errors.py  handler.py  traceback.py
latch_cli/menus/: __init__.py  common.py  vt100.py  win32.py  win32_types.py
latch_cli/nextflow/: config.py  dependencies.py  jit.py  serialize.py  types.py  utils.py  workflow.py
latch_cli/services/: context.py  cp.py  debug.py  execute.py  get.py  get_executions.py  get_params.py  init.py  launch.py  local_dev.py  local_dev_old.py  local_execute.py  login.py  ls.py  mkdir.py  move.py  open_file.py  preview.py  rm.py  serialize.py  stop_pod.py  sync.py  touch.py  utils.py  watch.py  workspace.py
latch_cli/snakemake/: config_parser.py  jit_dry_run.py  serialize.py  serialize_utils.py  single_task_snakemake.py  utils.py  workflow.py
latch_cli/utils/: __init__.py  doc.py  ldata.py  path.py  progress.py  workflow.py
release_notes/: 2.10.0.md  2.9.3.md  3.0.0.md  template.md
scratch/: raw_serialize.py
scripts/: generate_single_doc.py
src/latch/: __init__.py  account.py  executions.py  utils.py
src/latch_cli/: click_utils.py  constants.py  main.py  menus.py  tinyrequests.py  workflow_config.py
src/latch_sdk_config/: latch.py
src/latch_sdk_gql/: __init__.py  execute.py  utils.py
tests/: fixtures.py  foo.py  test.py  test_cli.py  test_execute.py  test_launch.py  test_login.py  test_ls.py  test_register.py  test_type_converter.py  test_type_engine.py  test_types.py
tests/adcplzry/: Dockerfile
tests/cp/: __init__.py
tests/resources/: test_workflow.py
(+332 files in other folders)
