[tool.poetry.dev-dependencies]
black = "^23.12.1"
isort = "^5.12.0"
ruff = "^0.0.261"

[tool.pyright]
pythonVersion = "3.8"

[tool.black]
preview = true
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py38"
pydocstyle = { convention = "google" }
extend-select = ["W", "D", "U", "N", "C", "B", "A", "T", "Q", "RUF100"]
extend-ignore = [
  "A002",
  "A003",

  "E402",
  "E501",
  "E741",

  "C408",
  "C901",

  "T201",

  "D415",

  "D100",
  "D101",

  "UP006",
  "UP035",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
